# maui-buho

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  main.qml
src/controllers/notes/: notescontroller.cpp
src/db/: db.cpp  db.h
src/models/notes/: notes.cpp  notes.h
src/providers/: abstractnotesprovider.h  nextnote.cpp
src/syncing/: notessyncer.cpp  syncer.cpp  syncer.h
src/utils/: owl.h  server.cpp  server.h
src/views/notes/: NotesView.qml
src/widgets/: CardDelegate.qml  NewNoteDialog.qml  SettingsDialog.qml
